# libdiscord-0.2

./: .gitignore  CMakeLists.txt  DNOTES.md  LNOTES.md  README.md  config.c  config.h  errorhandlers.c  errorhandlers.h  http.c  http.h  install.sh  json.c  json.h  libdiscord.c  libdiscord.h  libdiscordConfig.h.in  libdiscord_private.c  libdiscord_private.h  logging.c  logging.h  main.c  ratelimit.c  ratelimit.h  sample_config.cfg  websocket.c  websocket.h
